[gd_scene load_steps=11 format=3 uid="uid://cobdwyv0td2kl"]

[ext_resource type="Texture2D" uid="uid://b3wsr4o732mql" path="res://sprites/background.png" id="1_j5px3"]
[ext_resource type="Script" uid="uid://dw4t7gml03pn2" path="res://scripts/game.gd" id="1_lrqlo"]
[ext_resource type="PackedScene" uid="uid://ck8yhto06tpnn" path="res://scenes/player.tscn" id="2_twpsu"]
[ext_resource type="Script" uid="uid://20uyo5uxcot4" path="res://scripts/pipe_manager.gd" id="3_jh1ax"]
[ext_resource type="PackedScene" uid="uid://fn0rqk317i26" path="res://scenes/pipe_set.tscn" id="4_sqa0i"]
[ext_resource type="FontFile" uid="uid://hf3g7orjoeca" path="res://fonts/pixel-font.otf" id="6_p57ef"]
[ext_resource type="StyleBox" uid="uid://cf8051cyot4up" path="res://styles/button_normal.tres" id="7_u5sy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrqlo"]
size = Vector2(1152, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqa0i"]
size = Vector2(1153, 132)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gee14"]
bg_color = Color(0.228, 0.2793, 0.57, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 12
shadow_size = 2
shadow_offset = Vector2(2, 4)
anti_aliasing = false

[node name="Root" type="Node2D"]
script = ExtResource("1_lrqlo")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_j5px3")

[node name="PipeManager" type="Node2D" parent="."]
script = ExtResource("3_jh1ax")

[node name="PipeSet1" parent="PipeManager" instance=ExtResource("4_sqa0i")]
position = Vector2(1432, 273)

[node name="PipeSet2" parent="PipeManager" instance=ExtResource("4_sqa0i")]
position = Vector2(1996, 271)

[node name="PipeSet3" parent="PipeManager" instance=ExtResource("4_sqa0i")]
position = Vector2(2618, 258)

[node name="Player" parent="." instance=ExtResource("2_twpsu")]
position = Vector2(576, 324)

[node name="TopCollider" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollider"]
position = Vector2(576, -61)
shape = SubResource("RectangleShape2D_lrqlo")

[node name="BottomCollider" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollider"]
position = Vector2(576.5, 724)
shape = SubResource("RectangleShape2D_sqa0i")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 532.0
offset_right = 625.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="."]
offset_right = 1150.0
offset_bottom = 649.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverOverlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="GameOverOverlay"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0392157, 0.0392157, 0.0392157, 0.392157)

[node name="Label" type="Label" parent="GameOverOverlay"]
offset_left = 142.0
offset_top = 106.0
offset_right = 1011.0
offset_bottom = 339.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.739789, 2.00946e-06, 5.77569e-07, 1)
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 230
text = "game over"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GameOverOverlay"]
offset_left = 414.0
offset_top = 435.0
offset_right = 738.0
offset_bottom = 509.0
theme_override_colors/font_hover_pressed_color = Color(0.838897, 0.838897, 0.838897, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/align_to_largest_stylebox = 95
theme_override_fonts/font = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_gee14")
theme_override_styles/normal = ExtResource("7_u5sy4")
text = "Restart"

[connection signal="timeout" from="Timer" to="." method="_on_start_timer_timeout"]
[connection signal="on_player_collided" from="PipeManager" to="." method="_on_pipe_manager_on_player_collided"]
[connection signal="on_player_scored" from="PipeManager" to="." method="_on_pipe_manager_on_player_scored"]
[connection signal="on_pipe_out_of_screen" from="PipeManager/PipeSet1" to="PipeManager" method="_on_pipe_set_1_on_pipe_out_of_screen"]
[connection signal="on_player_collided_with_pipe" from="PipeManager/PipeSet1" to="PipeManager" method="_on_pipe_set_1_on_player_collided_with_pipe"]
[connection signal="on_player_scored" from="PipeManager/PipeSet1" to="PipeManager" method="_on_pipe_set_1_on_player_scored"]
[connection signal="on_pipe_out_of_screen" from="PipeManager/PipeSet2" to="PipeManager" method="_on_pipe_set_2_on_pipe_out_of_screen"]
[connection signal="on_player_collided_with_pipe" from="PipeManager/PipeSet2" to="PipeManager" method="_on_pipe_set_2_on_player_collided_with_pipe"]
[connection signal="on_player_scored" from="PipeManager/PipeSet2" to="PipeManager" method="_on_pipe_set_2_on_player_scored"]
[connection signal="on_pipe_out_of_screen" from="PipeManager/PipeSet3" to="PipeManager" method="_on_pipe_set_3_on_pipe_out_of_screen"]
[connection signal="on_player_collided_with_pipe" from="PipeManager/PipeSet3" to="PipeManager" method="_on_pipe_set_3_on_player_collided_with_pipe"]
[connection signal="on_player_scored" from="PipeManager/PipeSet3" to="PipeManager" method="_on_pipe_set_3_on_player_scored"]
[connection signal="body_entered" from="TopCollider" to="." method="_on_top_collider_body_entered"]
[connection signal="body_entered" from="BottomCollider" to="." method="_on_bottom_collider_body_entered"]
[connection signal="pressed" from="GameOverOverlay/Button" to="." method="_on_restart_button_pressed"]
